# pokerstove

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: cmake-build-test.yml  github-actions-demo.yml
VisualStudio/: VisualStudio.sln  pokerstove.ruleset
VisualStudio/Properties/: Console Setup.props  DLL Setup.props  Debug Setup.props  LIB Setup.props  Release Setup.props  Solution Setup.props  Test Setup.props  Windows Setup.props
VisualStudio/penum/: penum.vcxproj  penum.vcxproj.filters
VisualStudio/peval/: peval.vcxproj  peval.vcxproj.filters
VisualStudio/ps-colex/: ps-colex.vcxproj  ps-colex.vcxproj.filters
VisualStudio/ps-eval/: ps-eval.vcxproj  ps-eval.vcxproj.filters
VisualStudio/ps-lut/: ps-lut.vcxproj  ps-lut.vcxproj.filters
VisualStudio/util/: util.vcxproj  util.vcxproj.filters
android/: PokerStoveDemo.apk
doc/: eval-lut.adoc  peval.md  utils.adoc  workflow.adoc
libs/: CMakeLists.txt
libs/ext/gtest/: CMakeLists.txt
libs/pokerstove/peval/: BadugiHandEvaluator.h  CMakeLists.txt  Card.cpp  Card.h  CardSet.cpp  CardSet.h  CardSet.test.cpp  CardSetGenerators.cpp  CardSetGenerators.h  CardSetGenerators.test.cpp  DeuceToSevenHandEvaluator.h  DrawHighHandEvaluator.h  Holdem.h  HoldemHandEvaluator.h  OmahaEightHandEvaluator.h  OmahaHighHandEvaluator.h  OmahaHighHandEvaluator.test.cpp  PokerEvaluation.cpp  PokerEvaluation.h  PokerEvaluationTables.h  PokerHand.cpp  PokerHand.h  PokerHandEvaluation.h  PokerHandEvaluator.cpp  PokerHandEvaluator.h  PokerHandEvaluator.test.cpp  PokerHandEvaluator_Alloc.cpp  Rank.cpp  Rank.h  RazzHandEvaluator.h  StudEightHandEvaluator.h  StudHandEvaluator.h  Suit.cpp  Suit.h  UniversalHandEvaluator.h
libs/pokerstove/util/: combinations.h  utypes.h
programs/: CMakeLists.txt
programs/boardevallut/: CMakeLists.txt
programs/eval/: CMakeLists.txt  main.cpp
programs/ps-eval/: CMakeLists.txt
programs/ps-lut/: CMakeLists.txt
programs/pscolex/: CMakeLists.txt  main.cpp
programs/pseval/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  TestBuiltinBitops.cpp  config.h.in  test_builtin_bitops.cc
src/ext/googletest/: CMakeLists.txt
src/ext/googletest/googlemock/: CMakeLists.txt
src/ext/googletest/googletest/: CMakeLists.txt
src/ext/gtest/: CMakeLists.txt
src/lib/: CMakeLists.txt
src/lib/pokerstove/penum/: CMakeLists.txt  CardDistribution.cpp  CardDistribution.h  Odometer.h  PartitionEnumerator.h  PartitionEnumerator.test.cpp  ShowdownEnumerator.cpp  ShowdownEnumerator.h  SimpleDeck.hpp  SimpleDeck.test.cpp  card_distribution.cc  card_distribution.h  odometer.h  partition_enumerator.h  partition_enumerator_test.cc  showdown_enumerator.cc  showdown_enumerator.h  simple_deck.h  simple_deck_test.cc
src/lib/pokerstove/peval/: BadugiHandEvaluator.h  CMakeLists.txt  Card.cpp  Card.h  Card.test.cpp  CardSet.cpp  CardSet.h  CardSet.test.cpp  CardSetGenerators.cpp  CardSetGenerators.h  CardSetGenerators.test.cpp  DeuceToSevenHandEvaluator.h  DeuceToSevenHandEvaluator.test.cpp  DrawHighHandEvaluator.h  Holdem.h  HoldemHandEvaluator.h  HoldemHandEvaluator.test.cpp  OmahaEightHandEvaluator.h  OmahaEightHandEvaluator.test.cpp  OmahaHighHandEvaluator.h  OmahaHighHandEvaluator.test.cpp  PokerEvaluation.cpp  PokerEvaluation.h  PokerEvaluation.test.cpp  PokerEvaluationTables.h  PokerHand.cpp  PokerHand.h  PokerHandEvaluation.h  PokerHandEvaluator.cpp  PokerHandEvaluator.h  PokerHandEvaluator.test.cpp  PokerHandEvaluator_Alloc.cpp  Rank.cpp  Rank.h  Rank.test.cpp  RazzHandEvaluator.h  StudEightHandEvaluator.h  StudHandEvaluator.h  Suit.cpp  Suit.h  (+44 more)
src/lib/pokerstove/util/: CMakeLists.txt  combinations.h  combinations.test.cpp  lastbit.h  lastbit.test.cpp  lastbit_test.cc  timing.hpp  utypes.h
src/lib/python/: CMakeLists.txt  README.md  pokerstove.i  test-python
src/programs/: CMakeLists.txt
src/programs/builtins/: TestBuiltinBitops.cpp
src/programs/ps-colex/: CMakeLists.txt  main.cc  main.cpp
src/programs/ps-eval/: CMakeLists.txt  main.cc  main.cpp
src/programs/ps-lut/: CMakeLists.txt  main.cc  main.cpp
src/programs/ps-matrix/: holdem.py  ps-matrix
win32/: README.md
